--- a/Assignment 1/SectionC.ipynb
+++ b/Assignment 1/SectionC.ipynb
@@ -97,7 +97,17 @@
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "numerical_features = electricity_bill_df.select_dtypes(include=['float64', 'int64']).columns.tolist()\n",
     "categorical_features = electricity_bill_df.select_dtypes(include=['object']).columns.tolist()\n",
