--- a/Assignment 4/SectionC.ipynb
+++ b/Assignment 4/SectionC.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "import torchvision\n",
-    "import torchvision.transforms as transforms\n"
+    "from torchvision import datasets, transforms\n",
+    "from torch.utils.data import Dataset, DataLoader, Subset\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,39 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to ./data\\cifar-10-python.tar.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 170M/170M [00:15<00:00, 10.9MB/s] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data\\cifar-10-python.tar.gz to ./data\n"
-     ]
-    }
-   ],
-   "source": [
-    "trainset = torchvision.datasets.CIFAR10(root='./data', train=True, download=True, transform=transform)\n",
-    "trainloader = torch.utils.data.DataLoader(trainset, batch_size=4, shuffle=True, num_workers=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +39,25 @@
     }
    ],
    "source": [
-    "testset = torchvision.datasets.CIFAR10(root='./data', train=False, download=True, transform=transform)\n",
+    "trainset = datasets.CIFAR10(root='./data', train=True, download=True, transform=transform)\n",
+    "trainloader = torch.utils.data.DataLoader(trainset, batch_size=4, shuffle=True, num_workers=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n"
+     ]
+    }
+   ],
+   "source": [
+    "testset = datasets.CIFAR10(root='./data', train=False, download=True, transform=transform)\n",
     "testloader = torch.utils.data.DataLoader(testset, batch_size=4, shuffle=False, num_workers=2)"
    ]
   },
@@ -87,8 +75,7 @@
     "    img = img / 2 + 0.5  # Unnormalize the image\n",
     "    npimg = img.numpy()\n",
     "    plt.imshow(np.transpose(npimg, (1, 2, 0)))  # Convert from Tensor format (C x H x W) to (H x W x C)\n",
-    "    plt.show()\n",
-    "\n"
+    "    plt.show()"
    ]
   },
   {
